z-index fix

--- a/style.scss
+++ b/style.scss
@@ -279,9 +279,9 @@ section {
     flex-wrap: wrap;
     max-width: 630px;
     margin-top: 80px;
-    *{
-        padding:0 15px;
-    }
+    // *{
+    //     padding:0 15px;
+    // }
     h2{
         margin-bottom: 30px;
         padding: 0;
@@ -461,6 +461,7 @@ article {
         display: flex;
         justify-content: space-between;;
         padding: 5px;
+        z-index: 2;
     }
     .mob_logo {
         max-width: 190px;
@@ -478,7 +479,7 @@ article {
     height: 100%;
     width: 0;
     position: fixed; 
-    z-index: 1; 
+    z-index: 666; 
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); 
